--- a/index.html
+++ b/index.html
@@ -220,10 +220,10 @@
             </div>
           </div>
           
-          <!-- <div class="col-md-4">
+          <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <span class="ico-circle"><i class="ion-server"></i></span>
+                <ion-icon name="analytics-outline"></ion-icon>
               </div>
               <div class="service-content">
                 <h2 class="s-title">Photography</h2>
@@ -234,7 +234,7 @@
                 </p>
               </div>
             </div>
-          </div> -->
+          </div>
 
           <div class="col-md-4">
             <div class="service-box">
