--- a/index.html
+++ b/index.html
@@ -223,14 +223,12 @@
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <ion-icon name="analytics-outline"></ion-icon>
+                <span class="ico-circle"><i class="icon ion-analytics-outline"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Photography</h2>
+                <h2 class="s-title">Database Design</h2>
                 <p class="s-description text-center">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                  provident vitae! Magni
-                  tempora perferendis eum non provident.
+                  We Design Relational Database Schema for any scale of application as well as organizations.
                 </p>
               </div>
             </div>
