--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <span class="ico-circle"><i class="icon ion-analytics-outline"></i></span>
+                <span class="ico-circle"><ion-icon name="analytics-outline"></ion-icon></span>
               </div>
               <div class="service-content">
                 <h2 class="s-title">Database Design</h2>
@@ -785,6 +785,7 @@
   <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script src="assets/vendor/venobox/venobox.min.js"></script>
+  <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
