--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <span class="ico-circle"><i class="ion-monitor"></i></span>
+                <span class="ico-circle"><ion-icon name="desktop-outline"></ion-icon></span>
               </div>
               <div class="service-content">
                 <h2 class="s-title">Web Design</h2>
@@ -208,7 +208,7 @@
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <span class="ico-circle"><i class="ion-code-working"></i></span>
+                <span class="ico-circle"><ion-icon name="code-slash-outline"></ion-icon></span>
               </div>
               <div class="service-content">
                 <h2 class="s-title">Web Development</h2>
@@ -237,7 +237,7 @@
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <span class="ico-circle"><i class="ion-android-phone-portrait"></i></span>
+                <span class="ico-circle"><ion-icon name="phone-portrait-outline"></ion-icon></span>
               </div>
               <div class="service-content">
                 <h2 class="s-title">Responsive Design</h2>
