--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
               <div class="service-content">
                 <h2 class="s-title">Web Design</h2>
                 <p class="s-description text-center">
-                  We design beautiful, colorful and modern looking websites at affordable prices. 
+                  We design beautiful, colorful and modern looking websites with cool features at affordable prices. 
 
                 </p>
               </div>
