--- a/index.html
+++ b/index.html
@@ -247,24 +247,22 @@
               </div>
             </div>
           </div>
-
-          <!-- 
+ 
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <span class="ico-circle"><i class="ion-paintbrush"></i></span>
+                <span class="ico-circle"><ion-icon name="book-outline"></ion-icon></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Graphic Design</h2>
+                <h2 class="s-title">tutoring Services</h2>
                 <p class="s-description text-center">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                  provident vitae! Magni
-                  tempora perferendis eum non provident.
+                  We Offer tutoring services in different programming languages, including; Javascript/ES6, PHP, Python, and Java.
                 </p>
               </div>
             </div>
           </div>
 
+          <!--
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
