--- a/index.html
+++ b/index.html
@@ -262,23 +262,21 @@
             </div>
           </div>
 
-          <!--
+          
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <span class="ico-circle"><i class="ion-stats-bars"></i></span>
+                <span class="ico-circle"><ion-icon name="documents-outline"></ion-icon></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Marketing Services</h2>
+                <h2 class="s-title">Typing & Proof-Reading</h2>
                 <p class="s-description text-center">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                  provident vitae! Magni
-                  tempora perferendis eum non provident.
+                  We assist in typing documents as well as proof-reading a pre-typed document for accuracy at feasible prices.
                 </p>
               </div>
             </div>
           </div> 
-          -->
+         
         </div>
       </div>
     </section><!-- End Services Section -->
