--- a/index.html
+++ b/index.html
@@ -141,6 +141,10 @@
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
+                    <span>FAST TYPING</span> <span class="pull-right">93%</span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 93%" aria-valuenow="93" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
                   </div>
                 </div>
                 <div class="col-md-6">
