--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="intro-title mb-4">I am Ismail Abdulqudus</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">CEO TraceTechie,Web Developer,Web Designer,Frontend Developer,Backend Developer,Database Designer</span><strong class="text-slider"></strong></p>
+          <p class="intro-subtitle"><span class="text-slider-items">CEO TraceTechie,Full Stack Web Developer,Database Designer,Programming Tutor,Typist,Fashion Designer</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
