--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -104,7 +104,7 @@
               <li><strong>Category</strong>: Web design</li>
               <li><strong>Client</strong>: ASU Company</li>
               <li><strong>Project date</strong>: 01 March, 2020</li>
-              <li><strong>Project URL</strong>: <a href="#">tracetechie.github.io/tracemall</a></li>
+              <li><strong>Project URL</strong>: <a href="farmapropos.com">www.farmapropos.com</a></li>
             </ul>
           </div>
 
