--- a/index.html
+++ b/index.html
@@ -363,21 +363,23 @@
                   <img src="assets/img/work-2.jpg" alt="" class="img-fluid">
                 </div>
               </a>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">Trace Mall Fashion Stores</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2019</span>
+              <a href="tracetechie.github.io/tracetechie">
+                <div class="work-content">
+                  <div class="row">
+                    <div class="col-sm-8">
+                      <h2 class="w-title">Trace Mall Fashion Stores</h2>
+                      <div class="w-more">
+                        <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2019</span>
+                      </div>
                     </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="ion-ios-plus-outline"></span></a>
+                    <div class="col-sm-4">
+                      <div class="w-like">
+                        <a href="tracetechie.github.io/tracetechie"> <span class="ion-ios-plus-outline"></span></a>
+                      </div>
                     </div>
                   </div>
                 </div>
-              </div>
+              </a>
             </div>
           </div>
           <div class="col-md-4">
