--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                   <img src="assets/img/work-2.jpg" alt="" class="img-fluid">
                 </div>
               </a>
-              <a href="tracetechie.github.io/tracetechie">
+              <a href="tracetechie.github.io/tracemall">
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
@@ -374,7 +374,7 @@
                     </div>
                     <div class="col-sm-4">
                       <div class="w-like">
-                        <a href="tracetechie.github.io/tracetechie"> <span class="ion-ios-plus-outline"></span></a>
+                        <a href="tracetechie.github.io/tracemall"> <span class="ion-ios-plus-outline"></span></a>
                       </div>
                     </div>
                   </div>
@@ -389,21 +389,23 @@
                   <img src="assets/img/work-1.jpg" alt="" class="img-fluid">
                 </div>
               </a>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">Farm Apropos Agro-Investment</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">20 Aug. 2020</span>
+              <a href="farmapropos.com">
+                <div class="work-content">
+                  <div class="row">
+                    <div class="col-sm-8">
+                      <h2 class="w-title">Farm Apropos Agro-Investment</h2>
+                      <div class="w-more">
+                        <span class="w-ctegory">Web Design</span> / <span class="w-date">20 Aug. 2020</span>
+                      </div>
                     </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="ion-ios-plus-outline"></span></a>
+                    <div class="col-sm-4">
+                      <div class="w-like">
+                        <a href="farmapropos.com"> <span class="ion-ios-plus-outline"></span></a>
+                      </div>
                     </div>
                   </div>
                 </div>
-              </div>
+              </a>
             </div>
           </div>
           <div class="col-md-4">
@@ -413,21 +415,23 @@
                   <img src="assets/img/work-3.jpg" alt="" class="img-fluid">
                 </div>
               </a>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">Trace Techie Web Solution</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Jan. 2018</span>
+              <a href="tracetechie.github.io/tracemall">
+                <div class="work-content">
+                  <div class="row">
+                    <div class="col-sm-8">
+                      <h2 class="w-title">Trace Techie Web Solution</h2>
+                      <div class="w-more">
+                        <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Jan. 2018</span>
+                      </div>
                     </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="ion-ios-plus-outline"></span></a>
+                    <div class="col-sm-4">
+                      <div class="w-like">
+                        <a href="tracetechie.github.io/tracemall"> <span class="ion-ios-plus-outline"></span></a>
+                      </div>
                     </div>
                   </div>
                 </div>
-              </div>
+              </a>
             </div>
           </div>
           <!-- <div class="col-md-4">
