--- a/index.html
+++ b/index.html
@@ -372,11 +372,11 @@
                         <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2019</span>
                       </div>
                     </div>
-                    <div class="col-sm-4">
+<!--                     <div class="col-sm-4">
                       <div class="w-like">
                         <a href="tracetechie.github.io/tracemall"> <span class="ion-ios-plus-outline"></span></a>
                       </div>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
               </a>
@@ -398,11 +398,11 @@
                         <span class="w-ctegory">Web Design</span> / <span class="w-date">20 Aug. 2020</span>
                       </div>
                     </div>
-                    <div class="col-sm-4">
+<!--                     <div class="col-sm-4">
                       <div class="w-like">
                         <a href="farmapropos.com"> <span class="ion-ios-plus-outline"></span></a>
                       </div>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
               </a>
@@ -424,11 +424,11 @@
                         <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Jan. 2018</span>
                       </div>
                     </div>
-                    <div class="col-sm-4">
+<!--                     <div class="col-sm-4">
                       <div class="w-like">
                         <a href="tracetechie.github.io/tracemall"> <span class="ion-ios-plus-outline"></span></a>
                       </div>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
               </a>
