--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                   <img src="assets/img/work-2.jpg" alt="" class="img-fluid">
                 </div>
               </a>
-              <a href="/">
+              <a href="/tracetechie">
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
