--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-2.jpg" data-gall="portfolioGallery" class="venobox">
+              <a href="https://tracetechie.github.io/tracemall" data-gall="portfolioGallery" class="venobox">
                 <div class="work-img">
                   <img src="assets/img/work-2.jpg" alt="" class="img-fluid">
                 </div>
@@ -384,7 +384,7 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-1.jpg" data-gall="portfolioGallery" class="venobox">
+              <a href="https://www.farmapropos.com" data-gall="portfolioGallery" class="venobox">
                 <div class="work-img">
                   <img src="assets/img/work-1.jpg" alt="" class="img-fluid">
                 </div>
@@ -400,7 +400,7 @@
                     </div>
 <!--                     <div class="col-sm-4">
                       <div class="w-like">
-                        <a href="farmapropos.com"> <span class="ion-ios-plus-outline"></span></a>
+                        <a href="https://farmapropos.com"> <span class="ion-ios-plus-outline"></span></a>
                       </div>
                     </div> -->
                   </div>
@@ -410,7 +410,7 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-3.jpg" data-gall="portfolioGallery" class="venobox">
+              <a href="https://tracetechie.github.io/tracetechie" data-gall="portfolioGallery" class="venobox">
                 <div class="work-img">
                   <img src="assets/img/work-3.jpg" alt="" class="img-fluid">
                 </div>
@@ -426,7 +426,7 @@
                     </div>
 <!--                     <div class="col-sm-4">
                       <div class="w-like">
-                        <a href="tracetechie.github.io/tracemall"> <span class="ion-ios-plus-outline"></span></a>
+                        <a href="https://tracetechie.github.io/tracetechie"> <span class="ion-ios-plus-outline"></span></a>
                       </div>
                     </div> -->
                   </div>
