--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="work-box">
-              <a href="https://tracetechie.github.io/tracemall" data-gall="portfolioGallery" class="venobox">
+              <a href="https://tracetechie.github.io/tracemall">
                 <div class="work-img">
                   <img src="assets/img/work-2.jpg" alt="" class="img-fluid">
                 </div>
@@ -384,7 +384,7 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="https://www.farmapropos.com" data-gall="portfolioGallery" class="venobox">
+              <a href="https://www.farmapropos.com">
                 <div class="work-img">
                   <img src="assets/img/work-1.jpg" alt="" class="img-fluid">
                 </div>
@@ -410,7 +410,7 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="https://tracetechie.github.io/tracetechie" data-gall="portfolioGallery" class="venobox">
+              <a href="https://tracetechie.github.io/tracetechie">
                 <div class="work-img">
                   <img src="assets/img/work-3.jpg" alt="" class="img-fluid">
                 </div>
