--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
             <div class="work-box">
               <a href="https://tracetechie.github.io/tracemall">
                 <div class="work-img">
-                  <img src="assets/img/work-2.jpg" alt="" class="img-fluid">
+                  <img src="https://www.pexels.com/photo/basket-bassinet-business-cart-264547/" alt="" class="img-fluid">
                 </div>
               </a>
               <a href="https://tracetechie.github.io/tracemall">
@@ -386,7 +386,7 @@
             <div class="work-box">
               <a href="https://www.farmapropos.com">
                 <div class="work-img">
-                  <img src="assets/img/work-1.jpg" alt="" class="img-fluid">
+                  <img src="https://www.pexels.com/photo/white-chicken-on-brown-soil-4911723/" alt="" class="img-fluid">
                 </div>
               </a>
               <a href="https://www.farmapropos.com">
@@ -412,7 +412,7 @@
             <div class="work-box">
               <a href="https://tracetechie.github.io/tracetechie">
                 <div class="work-img">
-                  <img src="assets/img/work-3.jpg" alt="" class="img-fluid">
+                  <img src="https://www.pexels.com/photo/coffee-writing-computer-blogging-34600/" alt="" class="img-fluid">
                 </div>
               </a>
               <a href="https://tracetechie.github.io/tracetechie">
