--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                     <div class="col-sm-8">
                       <h2 class="w-title">Trace Mall Fashion Stores</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2019</span>
+                        <span class="w-ctegory">Business</span> / <span class="w-date">18 Sep. 2019</span>
                       </div>
                     </div>
 <!--                     <div class="col-sm-4">
@@ -395,7 +395,7 @@
                     <div class="col-sm-8">
                       <h2 class="w-title">Farm Apropos Agro-Investment</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">Web Design</span> / <span class="w-date">20 Aug. 2020</span>
+                        <span class="w-ctegory">Agriculture</span> / <span class="w-date">20 Aug. 2020</span>
                       </div>
                     </div>
 <!--                <div class="col-sm-4">
