--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
             <div class="work-box">
               <a href="https://tracetechie.github.io/tracetechie">
                 <div class="work-img">
-                  <img src="https://www.pexels.com/photo/coffee-writing-computer-blogging-34600/" alt="" class="img-fluid">
+                  <img src="https://images.pexels.com/photos/270360/pexels-photo-270360.jpeg?cs=srgb&dl=pexels-pixabay-270360.jpg" alt="" class="img-fluid">
                 </div>
               </a>
               <a href="https://tracetechie.github.io/tracetechie">
