--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
             <div class="work-box">
               <a href="https://tracetechie.github.io/tracemall">
                 <div class="work-img">
-                  <img src="https://www.pexels.com/photo/basket-bassinet-business-cart-264547/" alt="" class="img-fluid">
+                  <img src="https://images.pexels.com/photos/1005638/pexels-photo-1005638.jpeg?cs=srgb&dl=pexels-oleg-magni-1005638.jpg" alt="" class="img-fluid">
                 </div>
               </a>
               <a href="https://tracetechie.github.io/tracemall">
@@ -386,7 +386,7 @@
             <div class="work-box">
               <a href="https://www.farmapropos.com">
                 <div class="work-img">
-                  <img src="https://www.pexels.com/photo/white-chicken-on-brown-soil-4911723/" alt="" class="img-fluid">
+                  <img src="https://images.pexels.com/photos/5528986/pexels-photo-5528986.jpeg?cs=srgb&dl=pexels-zen-chung-5528986.jpg" alt="" class="img-fluid">
                 </div>
               </a>
               <a href="https://www.farmapropos.com">
