--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Trace Mall Fashion Stores</h2>
+                      <h2 class="w-title">Trace Mall Online Stores</h2>
                       <div class="w-more">
                         <span class="w-ctegory">Business</span> / <span class="w-date">18 Sep. 2019</span>
                       </div>
