--- a/index.html
+++ b/index.html
@@ -358,12 +358,12 @@
         <div class="row">
           <div class="col-md-4">
             <div class="work-box">
-              <a href="https://tracetechie.github.io/tracemall">
+              <a href="https://devvyhac.github.io/tracemall">
                 <div class="work-img">
                   <img src="https://images.pexels.com/photos/1005638/pexels-photo-1005638.jpeg?cs=srgb&dl=pexels-oleg-magni-1005638.jpg" alt="" class="img-fluid">
                 </div>
               </a>
-              <a href="https://tracetechie.github.io/tracemall">
+              <a href="https://devvyhac.github.io/tracemall">
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
@@ -410,12 +410,12 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="https://tracetechie.github.io/tracetechie">
+              <a href="https://devvyhac.github.io/devvyhac">
                 <div class="work-img">
                   <img src="https://images.pexels.com/photos/270360/pexels-photo-270360.jpeg?cs=srgb&dl=pexels-pixabay-270360.jpg" alt="" class="img-fluid">
                 </div>
               </a>
-              <a href="https://tracetechie.github.io/tracetechie">
+              <a href="https://devvyhac.github.io/devvyhac">
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
