--- a/index.html
+++ b/index.html
@@ -358,12 +358,12 @@
         <div class="row">
           <div class="col-md-4">
             <div class="work-box">
-              <a href="https://devvyhac.github.io/tracemall">
+              <a href="https://tracemall.herokuapp.com/">
                 <div class="work-img">
                   <img src="https://images.pexels.com/photos/1005638/pexels-photo-1005638.jpeg?cs=srgb&dl=pexels-oleg-magni-1005638.jpg" alt="" class="img-fluid">
                 </div>
               </a>
-              <a href="https://devvyhac.github.io/tracemall">
+              <a href="https://tracemall.herokuapp.com/">
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
@@ -384,12 +384,12 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="https://www.farmapropos.com">
+              <a href="https://farmvest.000webhostapp.com/">
                 <div class="work-img">
                   <img src="https://images.pexels.com/photos/5528986/pexels-photo-5528986.jpeg?cs=srgb&dl=pexels-zen-chung-5528986.jpg" alt="" class="img-fluid">
                 </div>
               </a>
-              <a href="https://www.farmapropos.com">
+              <a href="https://farmvest.000webhostapp.com/">
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
