--- a/index.html
+++ b/index.html
@@ -358,12 +358,12 @@
         <div class="row">
           <div class="col-md-4">
             <div class="work-box">
-              <a href="https://tracemall.herokuapp.com/">
+              <a href="https://tracemall.vercel.app/">
                 <div class="work-img">
                   <img src="https://images.pexels.com/photos/1005638/pexels-photo-1005638.jpeg?cs=srgb&dl=pexels-oleg-magni-1005638.jpg" alt="" class="img-fluid">
                 </div>
               </a>
-              <a href="https://tracemall.herokuapp.com/">
+              <a href="https://tracemall.vercel.app/">
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
@@ -374,7 +374,7 @@
                     </div>
 <!--                     <div class="col-sm-4">
                       <div class="w-like">
-                        <a href="tracetechie.github.io/tracemall"> <span class="ion-ios-plus-outline"></span></a>
+                        <a href="https://tracemall.vercel.app/"> <span class="ion-ios-plus-outline"></span></a>
                       </div>
                     </div> -->
                   </div>
