--- a/index.html
+++ b/index.html
@@ -410,12 +410,12 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="https://devvyhac.github.io/devvyhac">
+              <a href="https://devvyhac.github.io/real-devvyhac">
                 <div class="work-img">
                   <img src="https://images.pexels.com/photos/270360/pexels-photo-270360.jpeg?cs=srgb&dl=pexels-pixabay-270360.jpg" alt="" class="img-fluid">
                 </div>
               </a>
-              <a href="https://devvyhac.github.io/devvyhac">
+              <a href="https://devvyhac.github.io/real-devvyhac">
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
@@ -426,7 +426,7 @@
                     </div>
 <!--                     <div class="col-sm-4">
                       <div class="w-like">
-                        <a href="https://tracetechie.github.io/tracetechie"> <span class="ion-ios-plus-outline"></span></a>
+                        <a href="https://devvyhac.github.io/real-devvyhac"> <span class="ion-ios-plus-outline"></span></a>
                       </div>
                     </div> -->
                   </div>
